manifest/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug
  namespace: default
  labels:
    app: debug
spec:
  containers:
  - name: debug
    image: ubuntu:noble
    command: ["/bin/sleep", "3650d"]
    volumeMounts:
      - mountPath: /root/install.sh
        name: config
        subPath: install.sh
  volumes:
    - name: config
      configMap:
        name: debug
        defaultMode: 0744
  serviceAccountName: debug
