manifest/ingress-demo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: nginx-osii.tools-rmi-poc-cco-dev-aks.cco-dev.pub.aws.novonordisk.com
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nginx-osii.tools-rmi-poc-cco-dev-aks.cco-dev.pub.aws.novonordisk.com
    secretName: nginx-osii
